Fixed:  icon alignment

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -14,11 +14,9 @@ body {
 }
 
 .hero-arrow {
-
   position: absolute;
   top: 90%;
   left: 50%;
-  transform: translate(-50%, -50%);
   color: white;
 }
 
